CSS/styles.css
/* Text Styling */

@import url("https://use.typekit.net/gge8jvx.css");

h1 {
    font-family: sofachrome, sans-serif;
    font-weight: 500;
    font-size: 3vh;
    font-style: normal;
    text-align: center;
    color: #F2D22E;
}

h2 {
    font-family: "future-pt", sans-serif;
    font-weight: 700;
    font-style: normal;
    font-size: 3vh;

}

h3 {
    font-family: "future-pt", sans-serif;
    font-weight: 600;
    font-style: normal;
    font-size: 2vh;
    color: #EBF2CE;
}

p {
    font-family: "futura-pt", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 1.5vh;
    color: #EBF2CE;
}


/* Nav Bar Styling */
body {
    font-family: "futura-pt", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 20px;
    color: #EBF2CE;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background-color: #0a3640;
}

header {
    background-color: #ED1C24;
    color: #fff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 110px;
}

#logo {
    width: 150px;
    height: auto;
    margin-left: 30px;
}

nav {
    display: flex;
}

nav a {
    color: #EBF2CE;
    font-weight: 600;
    text-decoration: none;
    text-transform: uppercase;
    margin: 0 60px;

}

/* Welcome Section */

.welcome-section {
    position: relative;
    height: 40vh;
    background: url(/Assets/TwilightHourBar_01.jpg) center/cover no-repeat;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    text-align: center;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(10, 54, 64, 0.5);
    z-index: 1;
}

.welcome-text {
    z-index: 2;
}

.welcome-text h3 {
    font-weight: 600;
    color: #F2D22E;
    margin: 0;
}

.welcome-text h1 {
    margin: 5px;
}

/* About Section */

.about-section {
    font-family: "futura-pt", sans-serif;
    background-color: #F2D22E;
    color: #0a3640;
    width: 100%;
    height: 400px;
}

.about-text {
    color: #0a3640;
    justify-content: center;
    text-align: center;
    padding: 30px;
}

.about-text h3 {
    font-weight: 600;
    font-size: 40px;
    text-transform: uppercase;
}

.about-text p {
    font-size: 20px;
}


/* Menu Selection */

.icon {
    width: 300px;
    margin: 0px 100px 0px 300px;
}

.wine-section {
    background-color: #ED1C24;
    width: 100%;
    height: 550px;
}

.wine-selection {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.wine-details {
    flex: 1;
}

h2, h3, p {
    margin: 0;
}

h2, p {
    margin: 0 0 5% 0;
}

.beer-section {
    background-color: #F2D22E;
    width: 100%;
    height: 550px;
}

.beer-section h3 {
    color: #0a3640;
}

.beer-section p {
    color: #0a3640;
}

.beer-selection {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.beer-details {
    flex: 1;
    color: #0a3640;
}


.cocktail-section {
    width: 100%;
    height: 550px;
}

.cocktail-selection {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.cocktail-details {
    flex: 1;
}

/* Rounded Containers Section */

.rounded-container-wine {
    border-radius: 25px;
    background: url(/Assets/wine_photo.jpg);
    background-position: left top;
    background-repeat: no-repeat;
    background-size: cover;
    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.5);
    padding: 20px; 
    width: 200px;
    height: 300px;
    margin-bottom: 30px;
}

.rounded-container-beer {
    border-radius: 25px;
    background: url(/Assets/beer_photo.jpg);
    background-position: left top;
    background-repeat: no-repeat;
    background-size: cover;
    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.5);
    padding: 20px; 
    width: 200px;
    height: 300px;
    margin-bottom: 30px;
}

.rounded-container-cocktail {
    border-radius: 25px;
    background: url(/Assets/cocktail_photo.jpg);
    background-position: left top;
    background-repeat: no-repeat;
    background-size: cover;
    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.5);
    padding: 20px; 
    width: 200px;
    height: 300px;
    margin-bottom: 30px;
}

.rounded-container-h3 {
    margin-bottom: 10px;
}

h3 a {
    text-decoration: none;
    color: #EBF2CE;
}

.row {
    margin: 50px;
    align-items: center;
}

.column {
    float: left;
    width: 33.33%;
    text-align: center;
}
  
.row:after {
    content: "";
    display: table;
    clear: both;
}

@media screen and (max-width: 600px) {
    .column {
      width: 100%;
    }
}


/* Footer Section */

footer {
    background-color: #ED1C24;
    width: 100%;
    height: 200px;
    color: #fff;
    padding: 20px;
    text-align: center;
}

.footer-container {
    display: grid;
    grid-template-columns: auto 1fr 1fr 1fr;
    margin-top: 40px;
    gap: 20px;
    align-items: center;
}

.address,
.hours,
.contact {
    text-align: left;
    margin-left: 30px;
}

h4 {
    margin-top: 0;
}

